<resources>
    <string name="app_name">MemeWeather</string>
    <string name="hello_friend">Hello Friend</string>
    <string name="intro_spiel">I am an advanced AI that can predict the weather, give me a postcode and I can tell you your future</string>
    <string name="postcode">Postcode</string>
    <string name="submit">Predict</string>
    <string name="error_no_postcode">I could not find that postcode, please try a different one</string>
    <string name="error_network">I could not access the internet, try again later</string>
    <string name="error_unknown">Something went wrong and I have no idea what</string>
    <string name="error_impossible">You shouldn\'t be able to see this error</string>
    <string name="postcode_error_message">Can\'t find that</string>
    <string name="current">Current</string>
    <string name="next_24_hours">Next 24 hours</string>
    <string name="next_7_days">Next 7 days</string>
</resources>